# msm

./: .gitignore  CMakeLists.txt  README.md
cmake/: script.cmake
include/msm/: abbreviations.hpp  argparse.hpp  blz77.hpp  common.hpp  languages.hpp  mode.hpp  terminator.hpp  titleID.hpp  width.hpp
include/msm/decode/: clean.hpp  coded.hpp  codes.hpp  common.hpp
include/msm/encode/: clean.hpp  codeData.hpp  coded.hpp  coded.inl  coded.tcc  common.hpp  gameSpecific.inl
scripts/generate/: __init__.py  codeData.py  gameSpecific.py  languages.py  test.py  titleID.py
scripts/generate/abbreviations/: __init__.py  abbreviations.gperf  abbreviations.hpp  data.txt
src/: abbreviations.cpp  argparse.cpp  blz77.cpp  main.cpp  titleID.cpp  width.cpp
src/decode/: clean.cpp  coded.cpp
src/encode/: clean.cpp  coded.cpp
test/: util.sh
test/debug/ml1-remake/: decode_clean.sh  decode_coded.sh  encode_clean.sh  encode_coded.sh
test/debug/ml5/: decode_clean.sh  decode_coded.sh  encode_clean.sh  encode_coded.sh
test/debug/ml6/: decode_clean.sh  decode_coded.sh  encode_clean.sh  encode_coded.sh
test/debug/option_test/: 0-source.msm  1-encoded.msbt  2-valid_source.msm  3-valid_encoded.msm  4-clean.msf  4-clean.txt  5-clean_encoded.msbt  6-decoded_result.msm  proc.sh
test/debug/page_test/: 0-source.msm  1-encoded.msbt  2-valid_source.msm  4-clean.msf  (+5 more)
test/verify/: verify.sh
vscode extension/: CHANGELOG.md  language-configuration.json  package-lock.json  package.json  tReadme.md
vscode extension/src/: extension.ts
vscode extension/syntaxes/: msm.tmLanguage.json
(+260 files in other folders)
